--- a/public/test/test.html
+++ b/public/test/test.html
@@ -11,6 +11,8 @@
   <div id="content" style="display:none"></div>
 
   <script>mocha.setup('bdd')</script>
+  <script src="runtime.js"></script>
+  <script src="vendor.js"></script>
   <script src="tests.js"></script>
   <script>
     mocha.checkLeaks();
